Fix button layout on small screens

--- a/html/git-comment.com/stylesheets/main.css
+++ b/html/git-comment.com/stylesheets/main.css
@@ -67,3 +67,9 @@ header, section {
 .primary {
   color: #E94E12;
 }
+
+@media only screen and (max-device-width : 650px) {
+  .item, .highlight {
+    display: inline-block;
+  }
+}
